shader_compiler/deps/spirv_reflect/functions.h


SpvReflectResult spvReflectCreateShaderModule( size_t                   size, const void*              p_code, SpvReflectShaderModule*  p_module);
SpvReflectResult spvReflectCreateShaderModule2( SpvReflectModuleFlags    flags, size_t                   size, const void*              p_code, SpvReflectShaderModule*  p_module);
void spvReflectDestroyShaderModule(SpvReflectShaderModule* p_module);
uint32_t spvReflectGetCodeSize(const SpvReflectShaderModule* p_module);
const uint32_t* spvReflectGetCode(const SpvReflectShaderModule* p_module);
const SpvReflectEntryPoint* spvReflectGetEntryPoint( const SpvReflectShaderModule* p_module, const char*                   entry_point);
SpvReflectResult spvReflectEnumerateDescriptorBindings( const SpvReflectShaderModule*  p_module, uint32_t*                      p_count, SpvReflectDescriptorBinding**  pp_bindings);
SpvReflectResult spvReflectEnumerateEntryPointDescriptorBindings( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t*                     p_count, SpvReflectDescriptorBinding** pp_bindings);
SpvReflectResult spvReflectEnumerateDescriptorSets( const SpvReflectShaderModule* p_module, uint32_t*                     p_count, SpvReflectDescriptorSet**     pp_sets);
SpvReflectResult spvReflectEnumerateEntryPointDescriptorSets( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t*                     p_count, SpvReflectDescriptorSet**     pp_sets);
SpvReflectResult spvReflectEnumerateInterfaceVariables( const SpvReflectShaderModule* p_module, uint32_t*                     p_count, SpvReflectInterfaceVariable** pp_variables);
SpvReflectResult spvReflectEnumerateEntryPointInterfaceVariables( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t*                     p_count, SpvReflectInterfaceVariable** pp_variables);
SpvReflectResult spvReflectEnumerateInputVariables( const SpvReflectShaderModule* p_module, uint32_t*                     p_count, SpvReflectInterfaceVariable** pp_variables);
SpvReflectResult spvReflectEnumerateEntryPointInputVariables( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t*                     p_count, SpvReflectInterfaceVariable** pp_variables);
SpvReflectResult spvReflectEnumerateOutputVariables( const SpvReflectShaderModule* p_module, uint32_t*                     p_count, SpvReflectInterfaceVariable** pp_variables);
SpvReflectResult spvReflectEnumerateEntryPointOutputVariables( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t*                     p_count, SpvReflectInterfaceVariable** pp_variables);
SpvReflectResult spvReflectEnumeratePushConstantBlocks( const SpvReflectShaderModule* p_module, uint32_t*                     p_count, SpvReflectBlockVariable**     pp_blocks);
SpvReflectResult spvReflectEnumerateEntryPointPushConstantBlocks( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t*                     p_count, SpvReflectBlockVariable**     pp_blocks);
SpvReflectResult spvReflectEnumerateSpecializationConstants( const SpvReflectShaderModule*      p_module, uint32_t*                          p_count, SpvReflectSpecializationConstant** pp_constants);
const SpvReflectDescriptorBinding* spvReflectGetDescriptorBinding( const SpvReflectShaderModule* p_module, uint32_t                      binding_number, uint32_t                      set_number, SpvReflectResult*             p_result);
const SpvReflectDescriptorBinding* spvReflectGetEntryPointDescriptorBinding( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t                      binding_number, uint32_t                      set_number, SpvReflectResult*             p_result);
const SpvReflectDescriptorSet* spvReflectGetDescriptorSet( const SpvReflectShaderModule* p_module, uint32_t                      set_number, SpvReflectResult*             p_result);
const SpvReflectDescriptorSet* spvReflectGetEntryPointDescriptorSet( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t                      set_number, SpvReflectResult*             p_result);
const SpvReflectInterfaceVariable* spvReflectGetInputVariableByLocation( const SpvReflectShaderModule* p_module, uint32_t                      location, SpvReflectResult*             p_result);
const SpvReflectInterfaceVariable* spvReflectGetEntryPointInputVariableByLocation( const SpvReflectShaderModule* p_module, const char*                   entry_point, uint32_t                      location, SpvReflectResult*             p_result);
const SpvReflectInterfaceVariable* spvReflectGetInputVariableBySemantic( const SpvReflectShaderModule* p_module, const char*                   semantic, SpvReflectResult*             p_result);
const SpvReflectInterfaceVariable* spvReflectGetEntryPointInputVariableBySemantic( const SpvReflectShaderModule* p_module, const char*                   entry_point, const char*                   semantic, SpvReflectResult*             p_result);
const SpvReflectInterfaceVariable* spvReflectGetOutputVariableByLocation( const SpvReflectShaderModule*  p_module, uint32_t                       location, SpvReflectResult*              p_result);
const SpvReflectInterfaceVariable* spvReflectGetEntryPointOutputVariableByLocation( const SpvReflectShaderModule*  p_module, const char*                    entry_point, uint32_t                       location, SpvReflectResult*              p_result);
const SpvReflectInterfaceVariable* spvReflectGetOutputVariableBySemantic( const SpvReflectShaderModule*  p_module, const char*                    semantic, SpvReflectResult*              p_result);
const SpvReflectInterfaceVariable* spvReflectGetEntryPointOutputVariableBySemantic( const SpvReflectShaderModule*  p_module, const char*                    entry_point, const char*                    semantic, SpvReflectResult*              p_result);
const SpvReflectBlockVariable* spvReflectGetPushConstantBlock( const SpvReflectShaderModule*  p_module, uint32_t                       index, SpvReflectResult*              p_result);
const SpvReflectBlockVariable* spvReflectGetEntryPointPushConstantBlock( const SpvReflectShaderModule*  p_module, const char*                    entry_point, SpvReflectResult*              p_result);
SpvReflectResult spvReflectChangeDescriptorBindingNumbers( SpvReflectShaderModule*            p_module, const SpvReflectDescriptorBinding* p_binding, uint32_t                           new_binding_number, uint32_t                           new_set_number);
SpvReflectResult spvReflectChangeDescriptorSetNumber( SpvReflectShaderModule*        p_module, const SpvReflectDescriptorSet* p_set, uint32_t                       new_set_number);
SpvReflectResult spvReflectChangeInputVariableLocation( SpvReflectShaderModule*            p_module, const SpvReflectInterfaceVariable* p_input_variable, uint32_t                           new_location);
SpvReflectResult spvReflectChangeOutputVariableLocation( SpvReflectShaderModule*             p_module, const SpvReflectInterfaceVariable*  p_output_variable, uint32_t                            new_location);
const char* spvReflectSourceLanguage(SpvSourceLanguage source_lang);
const char* spvReflectBlockVariableTypeName( const SpvReflectBlockVariable* p_var);